# coursepilot-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  requirements.txt
src/: course_parser.py  lib.rs  main.py  main.rs  models.py  prof_parser.py
src/decode/: errors.rs  html.rs  models.rs  selectors.rs
src/request/: constants.rs  errors.rs  index.rs  search.rs
