[package]
name = "wolf-catalog_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
scraper = "0.23.1"
thiserror = "2.0.11"
lazy_static = "1.5.0"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
regex = "1.11.1"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]